--- a/kfctl_ibm.v1.1.0.yaml
+++ b/kfctl_ibm.v1.1.0.yaml
@@ -1,11 +1,10 @@
 apiVersion: kfdef.apps.kubeflow.org/v1
 kind: KfDef
 metadata:
+  creationTimestamp: null
   namespace: kubeflow
 spec:
   applications:
-  # Install istio in a different namespace: istio-system
-  # Remove this application if istio is already installed
   #- kustomizeConfig:
   #    repoRef:
   #      name: manifests
@@ -51,7 +50,6 @@ spec:
         name: manifests
         path: stacks/ibm/application/cert-manager
     name: cert-manager
-  # Install Kubeflow applications.
   - kustomizeConfig:
       repoRef:
         name: manifests
@@ -77,8 +75,6 @@ spec:
         name: manifests
         path: kfserving/installs/generic
     name: kfserving
-  # Spartakus is a separate applications so that kfctl can remove it
-  # to disable usage reporting
   - kustomizeConfig:
       repoRef:
         name: manifests
@@ -93,3 +89,4 @@ spec:
   - name: manifests
     uri: https://github.com/kubeflow/manifests/archive/v1.1-branch.tar.gz
   version: v1.1-branch
+status: {}
